<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify">Spotify Streamer</string>
    <string name="title_app">My Nanodegree Apps!</string>
    <string name="scores">Scores app</string>
    <string name="library">Libray app</string>
    <string name="bigger">Built it bigger</string>
    <string name="reader">Xyz reader</string>
    <string name="capstone">Capstone:my own app</string>
    <string name="open_app">Opens the app</string>
</resources>
