<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="30dp"
        android:text="@string/title_app"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:background="@color/blue"
        android:onClick="showToast"
        android:text="@string/spotify"
        android:textAllCaps="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:background="@color/blue"
        android:onClick="showToast"
        android:text="@string/scores"
        android:textAllCaps="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:background="@color/blue"
        android:onClick="showToast"
        android:text="@string/library"
        android:textAllCaps="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:background="@color/blue"
        android:onClick="showToast"
        android:text="@string/bigger"
        android:textAllCaps="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:background="@color/blue"
        android:onClick="showToast"
        android:text="@string/reader"
        android:textAllCaps="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:background="@color/pink"
        android:onClick="showToast"
        android:text="@string/capstone"
        android:textAllCaps="true"
        android:textColor="@android:color/white" />

</LinearLayout>
